--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 .git/*
 env/
-venv/
-.venv
-.venv/
-venv2
 venv2/
+.venv2
+.venv2/
+
 
 __pycache__/
 *.py[cod]
@@ -23,4 +22,3 @@ posts/static/
 media/
 
 db.sqlite3
-venv2
